--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Simbo's ESLint config.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec",
+    "cover": "istanbul cover ./node_modules/.bin/_mocha -- -R spec",
+    "watch": "mocha -R spec -w",
+    "codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -31,5 +34,11 @@
     "index.js",
     "LICENSE",
     "README.md"
-  ]
+  ],
+  "devDependencies": {
+    "codeclimate-test-reporter": "^0.1.1",
+    "glob": "^5.0.14",
+    "istanbul": "^0.3.21",
+    "mocha": "^2.3.3"
+  }
 }
